--- a/public/control.html
+++ b/public/control.html
@@ -19,133 +19,121 @@
         color: #f8fafc;
       }
 
+      header {
+        padding: 1.5rem 1.25rem 0;
+        text-align: center;
+      }
+
+      h1 {
+        margin: 0;
+        font-size: 1.45rem;
+      }
+
       main {
         flex: 1;
         display: flex;
         flex-direction: column;
-        padding: 1rem 1rem 2rem;
-        gap: 1rem;
-        align-items: center;
-      }
-
-      .poster {
-        position: relative;
-        width: min(420px, 90vw);
-        margin: 0 auto;
-      }
-
-      .poster img {
-        width: 100%;
-        height: auto;
-        display: block;
-        border-radius: 1.25rem;
-        box-shadow: 0 25px 50px rgba(2, 6, 23, 0.55);
-      }
-
-      .overlay-button {
-        position: absolute;
-        border: none;
-        background: rgba(255, 255, 255, 0.02);
-        border-radius: 999px;
-        width: 42%;
-        left: 29%;
-      }
-
-      .overlay-button:disabled {
-        opacity: 0;
-      }
-
-      .overlay-button.home {
-        top: 9%;
-        height: 8%;
-      }
-
-      .overlay-button.away {
-        top: 20%;
-        height: 8%;
-      }
-
-      .overlay-button.cancel {
-        width: 28%;
-        height: 7%;
-        left: 10%;
-        bottom: 18%;
-        border-radius: 1rem;
-      }
-
-      .control-panel {
-        width: 100%;
-        max-width: 420px;
-        display: flex;
-        flex-direction: column;
-        gap: 0.6rem;
-        font-size: 0.9rem;
+        padding: 1rem 1.25rem 2rem;
+        gap: 1.5rem;
       }
 
       form {
         display: flex;
-        gap: 0.4rem;
+        flex-direction: column;
+        gap: 0.5rem;
       }
 
       input[type="url"] {
-        flex: 1;
-        border-radius: 0.65rem;
-        border: 1px solid rgba(248, 250, 252, 0.25);
-        background: rgba(15, 23, 42, 0.85);
-        padding: 0.6rem 0.75rem;
+        border-radius: 0.75rem;
+        border: 1px solid rgba(248, 250, 252, 0.2);
+        background: rgba(15, 23, 42, 0.7);
+        padding: 0.85rem 1rem;
         color: inherit;
-        font-size: 0.9rem;
+        font-size: 1rem;
       }
 
       button.connect {
-        padding: 0.55rem 0.9rem;
-        border-radius: 0.65rem;
+        padding: 0.75rem 1.2rem;
+        border-radius: 0.75rem;
         border: none;
         background: linear-gradient(120deg, #22d3ee, #3b82f6);
         color: #05060a;
         font-weight: 600;
-        font-size: 0.9rem;
-        white-space: nowrap;
+        font-size: 1rem;
       }
 
       .status {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
         color: rgba(248, 250, 252, 0.8);
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 0.25rem;
       }
 
       .status span {
         font-weight: 600;
       }
 
+      .buttons {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 1rem;
+        margin-top: auto;
+      }
+
+      .buttons button {
+        font-size: 1.5rem;
+        min-height: 7rem;
+        border-radius: 1.5rem;
+        border: none;
+        color: #05060a;
+        font-weight: 700;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+      }
+
+      .buttons button.home {
+        background: linear-gradient(120deg, #fbbf24, #f97316);
+      }
+
+      .buttons button.away {
+        background: linear-gradient(120deg, #34d399, #10b981);
+      }
+
+      .buttons button.cancel {
+        background: linear-gradient(120deg, #f87171, #ef4444);
+      }
+
+      .buttons button:disabled {
+        opacity: 0.3;
+      }
+
       .last-send {
-        font-size: 0.8rem;
-        opacity: 0.7;
+        font-size: 0.85rem;
+        opacity: 0.65;
         text-align: center;
       }
     </style>
   </head>
   <body>
+    <header>
+      <h1>Jester Control</h1>
+    </header>
     <main>
-      <section class="poster">
-        <img src="./catastrophe-portrait.png" alt="Jester controller artwork" />
-        <button type="button" id="homeBtn" class="overlay-button home" aria-label="Meow Mission" disabled></button>
-        <button type="button" id="awayBtn" class="overlay-button away" aria-label="Purr-Ade" disabled></button>
-        <button type="button" id="cancelBtn" class="overlay-button cancel" aria-label="Nap Box" disabled></button>
-      </section>
-      <section class="control-panel">
-        <form id="serverForm">
-          <input type="url" id="serverInput" name="server" placeholder="wss://example.com" required />
-          <button type="submit" class="connect">Connect</button>
-        </form>
-        <div class="status">
-          <span>Connection: <span id="connectionStatus">idle</span></span>
-          <span>Displays: <span id="displayCount">0</span></span>
-        </div>
-        <div class="last-send" id="lastSend">No events sent yet</div>
+      <form id="serverForm">
+        <label for="serverInput">Realtime server URL (wss://...)</label>
+        <input type="url" id="serverInput" name="server" placeholder="wss://example.com" required />
+        <button type="submit" class="connect">Connect</button>
+      </form>
+      <div class="status">
+        Connection:
+        <span id="connectionStatus">idle</span>
+        &middot;
+        Displays connected:
+        <span id="displayCount">0</span>
+      </div>
+      <div class="last-send" id="lastSend">No events sent yet</div>
+      <section class="buttons">
+        <button type="button" class="home" id="homeBtn" disabled>Home</button>
+        <button type="button" class="away" id="awayBtn" disabled>Away</button>
+        <button type="button" class="cancel" id="cancelBtn" disabled>Cancel</button>
       </section>
     </main>
     <script type="module">
