--- a/public/control.html
+++ b/public/control.html
@@ -120,6 +120,8 @@
       <form id="serverForm">
         <label for="serverInput">Realtime server URL (wss://...)</label>
         <input type="url" id="serverInput" name="server" placeholder="wss://example.com" required />
+        <label for="tokenInput">Access token (optional)</label>
+        <input type="password" id="tokenInput" name="token" placeholder="shared secret" />
         <button type="submit" class="connect">Connect</button>
       </form>
       <div class="status">
@@ -153,8 +155,12 @@
       let lastSendAt = null;
 
       const savedUrl = localStorage.getItem(STORAGE_KEY);
+      const savedToken = localStorage.getItem(`${STORAGE_KEY}-token`);
       if (savedUrl) {
         serverInput.value = savedUrl;
+        if (savedToken) {
+          tokenInput.value = savedToken;
+        }
         connect(savedUrl);
       }
 
@@ -172,10 +178,12 @@
         }
 
         localStorage.setItem(STORAGE_KEY, normalized);
+        localStorage.setItem(`${STORAGE_KEY}-token`, tokenInput.value.trim());
         link?.dispose();
         link = new RealtimeLink({
           role: 'control',
           serverUrl: normalized,
+          token: tokenInput.value.trim(),
           onStatus: updateStatus,
           onAck: handleAck,
           onInfo: handleInfo
