--- a/public/control.html
+++ b/public/control.html
@@ -143,6 +143,7 @@
 
       const STORAGE_KEY = 'jester-server-url';
       const serverInput = document.querySelector('#serverInput');
+      const tokenInput = document.querySelector('#tokenInput');
       const serverForm = document.querySelector('#serverForm');
       const statusEl = document.querySelector('#connectionStatus');
       const displayCountEl = document.querySelector('#displayCount');
