--- a/public/control.html
+++ b/public/control.html
@@ -63,28 +63,28 @@
       }
 
       .tile.ski1 {
-        background-image: url('./images/1Ski.png');
+        background-image: url('./images/1Ski.PNG');
       }
       .tile.ski2 {
-        background-image: url('./images/2Ski.png');
+        background-image: url('./images/2Ski.PNG');
       }
       .tile.henry {
-        background-image: url('./images/3Henry.png');
+        background-image: url('./images/3Henry.PNG');
       }
       .tile.greta {
-        background-image: url('./images/4Greta.png');
+        background-image: url('./images/4Greta.PNG');
       }
       .tile.rooster {
-        background-image: url('./images/5Rooster.png');
+        background-image: url('./images/5Rooster.PNG');
       }
       .tile.dar {
-        background-image: url('./images/6Dar.png');
+        background-image: url('./images/6Dar.PNG');
       }
       .tile.red {
-        background-image: url('./images/7Red.png');
+        background-image: url('./images/7Red.PNG');
       }
       .tile.mrc {
-        background-image: url('./images/8MrC.png');
+        background-image: url('./images/8MrC.PNG');
       }
 
       .connection-block {
