--- a/public/control.html
+++ b/public/control.html
@@ -15,7 +15,7 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
-        background: #05060a;
+        background: #05060a url('./images/cat-game-background.png') center/cover no-repeat fixed;
         color: #f8fafc;
       }
 
